# x402-crypto-api

./: .gitignore  README.md  bazaar.json  cache.py  cdp_facilitator.py  endpoints.py  etherscan_endpoints.py  main.py  premium_endpoints.py  rate_limiter.py  shadowfeed-manifest.json  sitemap.xml  tracker.py
docs/: API.md  QUICKSTART.md
mcp-server/: README.md  server.py
promo/: README.md  reddit-post.md  twitter-posts.md
sdk/: README.md  pyproject.toml
sdk/x402_crypto/: __init__.py  client.py
